PR24065, 32-bit objcopy fails with 64-bit address ... out of range

PR 23699
	PR 24065
	* ihex.c (ihex_write_object_contents): Properly check 32-bit
	address range.